# AIMediaAssistant

./: .env.example  .gitignore  Design.md  README.md  pyproject.toml  requirements-optional.txt  requirements.txt
docker/: Dockerfile  docker-compose.yml
docs/: DIAGNOSIS.md  USAGE.md  agent-design.md  agent-learning-map.md  ai-safety.md  architecture.md  going-live.md  openclaw-integration.md  setup.md
scripts/: mcp_stdio.sh  register_openclaw.sh
src/ai_media_assistant/: __init__.py  cli.py  doctor.py
src/ai_media_assistant/agent/: __init__.py  embeddings.py  graph.py  guardrails.py  llm.py  memory.py  rag.py  runner.py  tools.py
src/ai_media_assistant/api/: __init__.py  app.py
src/ai_media_assistant/clients/: __init__.py
src/ai_media_assistant/clients/pt/: __init__.py  base.py  factory.py  http.py  mock.py  rss.py  torznab.py  web.py
src/ai_media_assistant/clients/qb/: __init__.py  base.py  factory.py  mock.py  (+1 more)
src/ai_media_assistant/database/: __init__.py  base.py  models.py  repositories.py
src/ai_media_assistant/mcp/: __init__.py  server.py
src/ai_media_assistant/services/: __init__.py  download_service.py  follow_service.py  recommendation_service.py  rss_cache_service.py  scheduler_service.py  search_service.py
src/ai_media_assistant/shared/: __init__.py  config.py  errors.py  logging.py  schemas.py
src/ai_media_assistant/web/: index.html
src/ai_media_assistant/workers/: __init__.py  rss_worker.py  scheduler.py
tests/: conftest.py  test_agent.py  test_follow_and_rag.py  test_pt_rss.py  test_pt_web.py  test_services.py  test_torznab.py
(+2 files in other folders)
